hphp/test/slow/compilation/open-rc-check.php.expectf
Fatal error: require(%s): File not found in %s on line 18
